--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@stripe/stripe-js": "^3.3.0",
     "ag-charts-react": "^9.2.1",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.1.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
+    "joi": "^17.12.3",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.368.0",
     "next": "14.2.1",
@@ -30,12 +32,14 @@
     "react-dom": "^18",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^9.0.1",
     "vaul": "^0.9.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.8",
     "eslint": "^8",
     "eslint-config-next": "14.2.1",
     "postcss": "^8",
