--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "next": "14.2.1",
     "pangea-node-sdk": "^3.7.0",
     "prisma": "^5.12.1",
+    "raw-body": "^2.5.2",
     "react": "^18",
     "react-dom": "^18",
+    "stripe": "^15.2.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
