--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.1.0",
     "clsx": "^2.1.0",
+    "cookie": "^0.6.0",
     "date-fns": "^3.6.0",
     "joi": "^17.12.3",
     "jwt-decode": "^4.0.0",
@@ -38,6 +39,7 @@
     "vaul": "^0.9.0"
   },
   "devDependencies": {
+    "@types/cookie": "^0.6.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
