--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.368.0",
     "next": "14.2.1",
+    "nextjs-progressbar": "^0.0.16",
     "pangea-node-sdk": "^3.7.0",
     "prisma": "^5.12.1",
     "raw-body": "^2.5.2",
