--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.368.0",
     "next": "14.2.1",
+    "next-themes": "^0.3.0",
     "nextjs-progressbar": "^0.0.16",
     "pangea-node-sdk": "^3.7.0",
     "prisma": "^5.12.1",
     "raw-body": "^2.5.2",
     "react": "^18",
     "react-dom": "^18",
+    "sonner": "^1.4.41",
     "stripe": "^15.2.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
