--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "raw-body": "^2.5.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-fast-marquee": "^1.6.4",
     "sonner": "^1.4.41",
     "stripe": "^15.2.0",
     "tailwind-merge": "^2.2.2",
