--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next": "14.2.1",
     "next-themes": "^0.3.0",
     "nextjs-progressbar": "^0.0.16",
+    "openai": "^4.38.2",
     "pangea-node-sdk": "^3.7.0",
     "prisma": "^5.12.1",
     "raw-body": "^2.5.2",
