--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.0",
     "cookie": "^0.6.0",
     "date-fns": "^3.6.0",
+    "dayjs": "^1.11.10",
     "joi": "^17.12.3",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.368.0",
