added create fundraiser, embargo and ip intel

--- a/.env.template
+++ b/.env.template
@@ -8,6 +8,8 @@ NEXT_PANGEA_VAULT_TOKEN=
 NEXT_PANGEA_FileIntel=
 NEXT_PANGEA_UserIntel=
 NEXT_PANGEA_SECURE_AUDIT=
+NEXT_PANGEA_IP_Service=
+NEXT_PANGEA_EMBARGO_Service=
 
 
 DATABASE_URL=
