--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.4",
+    "request-ip": "^3.3.0",
     "sonner": "^1.4.41",
+    "spark-md5": "^3.0.2",
     "stripe": "^15.2.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
@@ -51,6 +53,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/request-ip": "^0.0.41",
+    "@types/spark-md5": "^3.0.4",
     "@types/uuid": "^9.0.8",
     "eslint": "^8",
     "eslint-config-next": "14.2.1",
